# AutoNews2

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  main.py  pyproject.toml
autonews2/: api_key.txt  asgi.py  manage.py  settings.py  urls.py  wsgi.py
autonews2/autonews2/: settings.py
autonews2/myapp/functions/: api_handler.py
autonews2/myapp/templates/myapp/: dashboard.html  history.html
myapp/: models.py  settings.py  urls.py  views.py
myapp/functions/: api_handler.py  forms.py
myapp/migrations/: 0001_initial.py  0002_news_date.py  0003_remove_news_date_news_published_at.py  0004_news_char_count_received_news_char_count_requested_and_more.py  0005_alter_news_char_count_received_and_more.py  0006_url.py
myapp/site_parser/: date_utils.py  html_parser.py  rss_parser.py  site_parser.py  text_extractor.py
myapp/templates/myapp/: add_url.html  delete_url.html  edit_url.html  frequency_form.html  history.html  home.html  news_detail.html  parsing.html  settings.html  settings_form.html  sidebar.html  url_list.html
